[gd_scene load_steps=8 format=3 uid="uid://c3l7jgjhr2rtb"]

[ext_resource type="Script" path="res://scripts/chest.gd" id="1_yrpq3"]
[ext_resource type="Texture2D" uid="uid://mw0jalmrdd2j" path="res://sprites/New Art/Outdoor Overgrown 32x32/TX Props - Chest.png" id="2_e6k2r"]
[ext_resource type="Texture2D" uid="uid://jjrvsjcob3lt" path="res://sprites/New Art/Kyrise's 16x16 RPG Icon Pack - V1.3/spritesheet/spritesheet_16x16.png" id="3_i403m"]
[ext_resource type="PackedScene" uid="uid://dd1s28kbfnt7j" path="res://scenes/sfx.tscn" id="4_f3ktx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h744n"]
size = Vector2(19, 18.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxukm"]
size = Vector2(23, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_47jso"]
radius = 89.0

[node name="Chest" type="Node2D"]
script = ExtResource("1_yrpq3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_e6k2r")
hframes = 8
vframes = 8
frame = 1

[node name="SpriteContent" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, -1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_i403m")
hframes = 16
vframes = 22
frame = 128

[node name="RigidBody2D" type="RigidBody2D" parent="."]
visible = false
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(9.5, 7.66667)
shape = SubResource("RectangleShape2D_h744n")

[node name="PlayerCollision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(9.5, 9)
shape = SubResource("RectangleShape2D_xxukm")

[node name="EnemyMonstersCheck" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyMonstersCheck"]
position = Vector2(9, 9)
shape = SubResource("CircleShape2D_47jso")

[node name="sfx" parent="." instance=ExtResource("4_f3ktx")]

[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
